# warehouse/internal/controller/auth.go
@@ -8,6 +8,7 @@ import (
 
 	"github.com/gin-gonic/gin"
 )
+
 // SignIn godoc
 // @Summary Авторизация пользователя
 // @Description Вход по логину и паролю
@@ -17,7 +18,7 @@ import (
 // @Param credentials body models.UserSignIn true "Учётные данные"
 // @Success 200 {object} map[string]string
 // @Failure 400 {object} map[string]string
-// @Router /auth/sign-in [post]
+// @Router /sign-in [post]
 func SignIn(c *gin.Context) {
 	// получить идентификатор и пароль
 	var u models.UserSignIn
